<resources>
    <string name="app_name">Zeta</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- Strings related to login -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="r2017"> The system consists of five networked PCs. Doctors use the system to access a number of databases. The most important of which holds the records of all the patients in the practice. These files contain personal details and the medical history of the patient. The doctor can call up the appointment book prior to the consultation. By clicking on the patient’s name. they have immediate access to that patient’s records. Doctors can also access a drugs database which provides prescribing information on thousands of drugs. The reception staff use a tailored software developed from a database to enter all appointment dates and times for each doctor. The manger uses a payroll package based on a spreadsheet to calculate salaries for each employee of the health center.</string>


    <!-- TODO: Remove or change this placeholder text -->

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Change the following strings as required -->
    <string name="back4app_app_id">nLSIAO4OqdBTYE9OnHPTdYsXkwH5czYXuvamOMAH</string>
    <string name="back4app_client_key">tF7OPUxOmdrH3aMV03vKoFI4FZF1lWo7MEjYFDgv</string>
    <string name="university_of_aleppo_faculty_of_informatic">University of Aleppo - Faculty of Informatic</string>
    <string name="form_b_2012_third_term">Form / B / 2012 - Third Term</string>
    <string name="_1_read_the_following_passage_and_answer_the_qustions">1 ) Read The following Passage and answer the qustions</string>
    <string name="stream_is_a_way_of_dealing_with_bandwidth_problems_1_you_download_vedio_from_the_internet_one_key_to_successful_streaming_is_the_process_of_buffering_when_you_download_a_movie_the_vedio_player_stores_apart_of_the_movie_in_memory_before_playing_it_imagine_the_buffer_as_a_continer_filled_from_top_when_the_continer_is_full_the_player_sends_data_on_for_playback_from_the_bottom_data_2_coming_as_a_clip_plays_the_user_can_view_the_begining_of_the_movie_as_rest_of_of_the_movie_as_the_rest_of_clip_downloads_when_connection_3_interruption_occur_the_amount_of_data_in_the_buffer_deceasrs_but_as_long_as_some_4_playback_is_uninterrupted_playback_continues_as_a_steady_rafe_until_the_buffer_is_empty">Stream is a way of dealing with bandwidth problems (1)........you download vedio from the internet.One Key to successful streaming is the process of buffering when you download a movie, the vedio player stores apart of the movie in memory before playing it . Imagine the buffer as a continer filled from top when the continer is full , the player sends data on for playback from the bottom ,data (2) ........ coming as a clip plays , The user can view the begining of the movie as rest of of the movie as the rest of clip downloads When Connection (3).......interruption occur, the amount of data in the buffer deceasrs but as long as some (4).........,playback is uninterrupted, Playback continues as a steady rafe until the buffer is empty</string>
    <string name="txt2013">Although the format of a mail message transmitted from one machine to another is rigidly defined, different mail protocols transfer and store messages in slightly different way. SMTP is used to transfer messages between one mail server and another. It is also used by email programs to send mail to the server. It is the only protocol available for users in Unix and host-based mail system. POP is a message retrieval protocol used by mail clients to get messages from a server. Typically, ISP mail server. IMAP is similar to POP, but allows you more choice over what messages you download.</string>
    <string name="txt2014">The GPS (1) was developed by the US military. It was designed to pinpoint (2) locations. The locations could be anywhere in the world. It (3) consists of 24 earth-orbiting satellites, The satellites are 17000 kms above the earth. Each satellite broadcasts (4) a coded radio signal. The signal indicates the time and satellite’s exact position. A GPS receiver contains a microprocessor. The microprocessor compares signals. The signals are from at least three satellites. The microprocessor calculates the latitude, longitude and altitude (5) of the receiver. GPS has many uses apart from military. It can be used for orienting hikers, navigating ships, tracking trucks and buses and locating stolen cars.</string>
    <string name="txt2015">At the heart of the Internet Protocol portion of TCP/IP is a concept called Internet Address. This 32-bit coding system assigns a number to every node on the network. There are various types of addresses designed for networks of different sizes, but you can write every address with a series of numbers that identify the major network and the sub-networks to which a node is attached. Besides identifying a node, it provides a path that gateways can use to route information from one machine to another. Although data delivery systems like Ethernet or X-25 bring their packets to any machine electrically attached to the cable, IP modules must know each other’s internet addresses if they are to communicate.</string>
    <string name="r2016_3">Most modern music is mixed using computers.Musicains record their music into a computer system (which is) called MID (1).MID was developed as a standard interface for linking (2) music synthesisers and instruments together.Computers fitted (3) with MID interface boards can be connected to MID instruments allowing the music to be stored on computer and and displayed on the monitor when it is being played.The music can be displayed as a musical score and edited using all the features of a mixing desk.The music can also be printed out from the computer while it (4) is being played .MID does not transmit any second ,only simple binary (5) information .The information ,which consists of sound encoded as 8-bit bytes of digital information ,is called a MID message.The most common message consist of instructions telling the receiving instrument to play a note for a specific duration of time.The instruction also contain datails of how loud to play that note and a number which indicates which instrument to play. for example ,67 is a saxophone.</string>
    <string name="r2016_1">What are the advantages of wireless network? You don`t need cabling. In older buildings, it (1) can be expensive to install. With WiFi (2), one access point can cover a entire floor or even a building. You can work anywhere within range of the access point. On a sunny day, you can work outside. You can make any room in the house youe study. There are now WiFi hotspots (3) in hotels, libraries and airports so you can link to network away from home or your office. There are dis advantages. Fixed LANs can run at 1000Mhps. Wireless networks re mush slower and are from an access point, the slower the rate. Wireless NICs are more expensive than the wired version.</string>
    <string name="log">تسجيل الدخول</string>
    <string name="r2018">Streaming is a way of dealing with bandwidth problems when you download video from the internet. One key to successful steaming is the process of buffering. when you download a movie, the video player stores parts of the movie in memory before playing it. Imagine the buffer as a container filled from the top. Once the container is filled ,the player sends data on for playback from the bottom. Data keeps comping in as a clip plays. The user can view the beginning of the movie as the rest of the clip downloads. When the connection slows down or interruption occurs, the amount of data in the buffer decreases but as long as remains, playback is uninterrupted. Playback continues at a steady rate until the buffer is empty.</string>
    <string name="r2017_2">The application layer is the only part of communication process that a user sees, and even then, the user does not see most of the work that the application does to prepare a message for sending over a network. It converts a message\'s data from human-readable form into bits and attaches a header identifying the sending and receiving computers. The presentation layer ensures that the message is transmitted in a language that the receiver computer can interpret. This layer translates that message if necessary and then compresses and perhaps encrypts the data. It adds another header specifying the language as well as the compression and encryption schemes.</string>
    <string name="r2016_2">What are the advantages of a wireless network? You don\'t need cabling. In older buildings, it (1) can be expensive to install. With WiFi (2), one access point can cover a entire floor or even a building. You can work anywhere within range of the access point. On a sunny day, you can work outside. You can make any room in the house your study. There are now WiFi hotspots (3) in hotels, libraries and airports so you can link to a network away from home or your office. There are disadvantages. Fixed LANs can run at 1000Mbps. Wireless networks are much slower and the further you are from an access point, the slower the rate. Wireless NICs are more expensive than the wired version.</string>
</resources>
