<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView

        android:id="@+id/nested2015"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:layoutDirection="ltr">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginEnd="@dimen/ib_fr_space_20"
                        android:fontFamily="@font/a5"
                        android:gravity="start"
                        android:padding="10dp"
                        android:text="@string/university_of_aleppo_faculty_of_informatic"
                        android:textDirection="ltr" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginEnd="@dimen/ib_fr_space_20"
                        android:fontFamily="@font/a5"
                        android:gravity="start"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="10dp"
                        android:text="Form / A / 2016 - Three Term"
                        android:textDirection="ltr" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:fontFamily="@font/muli"
                android:gravity="start"
                android:text="@string/_1_read_the_following_passage_and_answer_the_qustions"
                android:textDirection="ltr"
                android:textSize="16sp"
                android:textStyle="bold" />

            <include layout="@layout/separator_layout" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:fontFamily="@font/muli_regular"
                        android:gravity="start"
                        android:lineSpacingMultiplier="1.4"
                        android:padding="2dp"
                        android:text="@string/r2016_3"
                        android:textColor="@color/black"
                        android:textDirection="ltr"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycle_view2016_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
    <LinearLayout
        android:id="@+id/pro2016_3"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:visibility="visible"
        android:background="@color/error_stroke_color"
        android:orientation="vertical">

        <com.github.ybq.android.spinkit.SpinKitView
            style="@style/SpinKitView.Large.PulseRing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:padding="30dp"

            android:layout_margin="5dp"
            app:SpinKit_Color="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="الرجاء الانتظار ...."
            android:layout_margin="20dp"
            android:layout_weight="2"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="تعلَّمْ فليس المرءُ يولدُ عالماً … وليس أخو علمٍ كمن هو جاهلُ"
            android:layout_margin="20dp"
            android:layout_weight="2"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>












